# orders-closer

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: logger_settings.py  settings.py
app/services/: order_service.py
app/tomato_api/: orders.py
app/tomato_api/exceptions/: base_exception.py  extentions.py
core/: settings.py
tomato_api/: auth_method.py  change_order_status.py  close_orders.py  get_orders.py
tomato_api/core/: settings.py
